last work version

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -23,9 +23,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/ll5">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tvMainName"
