--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -29,27 +29,6 @@
         android:id="@+id/recyclerViewXml"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
-
-        <LinearLayout
-            android:id="@+id/ll5"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tvMainName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textSize="20dp" />
-
-            <TextView
-                android:id="@+id/tvMainLastName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:textSize="20dp" />
-        </LinearLayout>
-    </android.support.v7.widget.RecyclerView>
+        android:scrollbars="vertical" />
 
 </LinearLayout>
